2009-07-10  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	Fix the options RPlayVolume and RPlayPriority in FvwmEvent.

	* libs/Fplay.h (Fplay_set, Fplay_get, Frptp_putline)
	(Frptp_async_putline):
	Fix ANSI C compatibility.

	* NEWS:
	* fvwm/ewmh_names.c (EWMH_WMName):
	set the HAS_EWMH_WM_NAME flag even if the window name on display
	isn't changing.
	(EWMH_WMIconName):
	same for HAS_EWMH_WM_ICON_NAME

2009-07-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	fix for segfault with RPlatHost directive in FvwmEvent
	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/Fplay.h:
	add Fplay.h wrapper header for rplay.h

	* NEWS:
	fix debian bug #438132

2009-07-06  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/style.c (fw_match_style_id):
	Fix fvwmstyle resource

2009-07-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/events.c (HandleMapRequestKeepRaised):
	Make sure that a PropertyNotify on the WM_STATE property is always
	sent out when a window is requested to be moved to the withdrawn
	state. (Needed by QT)

2009-07-01  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* sample.fvwmrc/DecorMwm:
	* sample.fvwmrc/DecorWin95:
	* sample.fvwmrc/new-features:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	Use !-negation for styles instead of No...

	* NEWS:
	fix a typo

	* sample.fvwmrc/system.fvwm2rc-sample-95:
	sed -i '/^#*\(+\|AddToMenu\) "[^%"]*%[^%"]*"/s/%\([^"]*\)/%\1%/'
	sed -i 's/StayOnTop/StaysOnTop/'
	According to patches by Manoj Srivastava

2009-03-17  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/externs.h:
	* fvwm/fvwm.c:
	* fvwm/session.c:
	convert my old code to use var_name and function_name coding style

2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.28

	* ANNOUNCE:
	* NEWS:
	* configure.ac: