@@ -1,3 +1,13 @@
+2009-07-10  Thomas Adam  <thomas.adam22@gmail.com>
+	* fvwm/add_window.c (setup_window_name_count):
+	* fvwm/add_window.c (setup_icon_name_count):
+	Deprecate these in favour of setup_name_count()
+
+	* fvwm/add_window.c (setup_name_count):
+	Amalgamate setup_window_name_count and setup_icon_name_count to just
+	one function (very similar code between them.)  Used with
+	IndexedWindowName and IndexedIconName.
+
 2009-07-10  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
 
 	* NEWS:
